[package]
name = "casino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
teloxide = "0.12.2"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
name = "slotmachine"
path = "slotmachine/src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
